classifiernii notebook modified

--- a/notebooks/classifier.ipynb
+++ b/notebooks/classifier.ipynb
@@ -517,6 +517,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_df_v2.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df_v2.groupby('label').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#this cell is for a general classification knowledge\n",
     "HEIGHT, WIDTH = 256, 256\n",
     "#nets = ['Vgg16', 'MobileNet', 'ResNet50']\n",
