--- a/notebooks/classifiernii.ipynb
+++ b/notebooks/classifiernii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-02 19:43:23.786431: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-04-02 19:43:23.884963: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import zipfile\n",
@@ -133,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,9 +401,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== paths info ================\n",
+      "Control train paths:  784\n",
+      "Control test paths:  210\n",
+      "Parkinson train paths:  3507\n",
+      "Parkinson test paths:  315\n",
+      "========== labels info ================\n",
+      "Control train labels:  784\n",
+      "Control test labels:  210\n",
+      "Parkinson train labels:  3507\n",
+      "Parkinson test labels:  315\n"
+     ]
+    }
+   ],
    "source": [
     "root_path = \"/home/Data/Datasets/Parkinson/radiological/PPMI/spect-mri/filtered/\"\n",
     "##===== for control group\n",
@@ -447,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,6 +559,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the number of batches per epoch\n",
+    "num_train_samples = len(X_train_files)\n",
+    "num_valid_samples = len(X_test_files)\n",
+    "\n",
+    "num_train_steps = num_train_samples // batch_size\n",
+    "num_valid_steps = num_valid_samples // batch_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -552,12 +593,7 @@
     "\n",
     "# Train the model, doing validation at the end of each epoch\n",
     "num_epochs = 100\n",
-    "# Calculate the number of batches per epoch\n",
-    "num_train_samples = len(X_train_files)\n",
-    "num_valid_samples = len(X_test_files)\n",
     "\n",
-    "num_train_steps = num_train_samples // batch_size\n",
-    "num_valid_steps = num_valid_samples // batch_size\n",
     "#save model\n",
     "save_path = \"/home/Data/franklin/Doctorado/parkinson/projects/parcellation_translation/models/embc_extension/classifier/mri_spect/nii_files/\"\n",
     "\n",
@@ -613,6 +649,224 @@
     "        model_name = \"vgg16AccReference.h5\"\n",
     "        custom_model.save(save_path+model_name)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing the model\n",
+    "Loading each model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loading the model\n",
+    "name = \"vgg16LossReference.h5\"\n",
+    "root_path = \"/home/Data/franklin/Doctorado/parkinson/projects/\"\n",
+    "model_path = root_path + 'T1-SPECT-PD-translation/models/embc_extension/classifier/mri_spect/nii_files/vgg16AccReference.h5'\n",
+    "model = keras.models.load_model(model_path, compile=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 2s 2s/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "# Predict labels for the validation data\n",
+    "predicted_labels = []\n",
+    "true_labels = []\n",
+    "\n",
+    "for _ in range(num_valid_steps):\n",
+    "    X_valid_batch, y_valid_batch = next(val_generator)\n",
+    "    batch_predictions = model.predict(X_valid_batch)\n",
+    "    batch_predicted_labels = np.argmax(batch_predictions, axis=1)\n",
+    "    predicted_labels.extend(batch_predicted_labels)\n",
+    "    true_labels.extend(y_valid_batch.numpy())\n",
+    "\n",
+    "# Convert lists to numpy arrays\n",
+    "predicted_labels = np.array(predicted_labels)\n",
+    "true_labels = np.array(true_labels)\n",
+    "\n",
+    "# Generate classification report\n",
+    "report = classification_report(true_labels, predicted_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0,\n",
+       "       1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0, 1,\n",
+       "       1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0,\n",
+       "       1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0,\n",
+       "       0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 0, 1,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0,\n",
+       "       0, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1,\n",
+       "       0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1,\n",
+       "       1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 1, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0,\n",
+       "       0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0,\n",
+       "       0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1,\n",
+       "       1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_labels"
    ]
   },
   {
